@@ -1,23 +1,23 @@
 <?php
 class SGL_Observer
 {
-    function update($observable) {}   
+    function update($observable) {}
 }
 
 class SGL_Observable
 {
     var $aObservers = array();
-    
+
     function attach($observer)
     {
         $this->aObservers[] = $observer;
     }
-    
+
     function detach()
     {
         $this->aObservers = array_diff($this->aObservers, array($observer));
     }
-    
+
     function notify()
     {
         foreach ($this->aObservers as $obs) {
@@ -25,12 +25,9 @@ class SGL_Observable
             if (PEAR::isError($returnVal)) {
                 PEAR::raiseError($returnVal->getMessage(), $returnVal->getCode());
             }
-        }        
+        }
     }
-    
-    function getStatus()
-    {
 
-    }
+    function getStatus() {}
 }
 ?>
